deploy/server/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: seedwing-policy-server
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: letsencrypt-certificate
    cert-utils-operator.redhat-cop.io/inject-CA: "false"
  name: seedwing
  namespace: seedwing
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  host: playground.seedwing.io
  port:
    targetPort: endpoint
  to:
    kind: Service
    name: seedwing-policy-server
    weight: 100
  wildcardPolicy: None
